fix: correctly break lines when overflow

--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,5 @@ body {
 }
 
 span {
-  white-space: pre;
+  white-space: break-spaces;
 }
